fixing alignemtn

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -37,6 +37,7 @@
   font-size: 2em;
   letter-spacing: 0.2rem;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  text-align: center;
 }
 
 /* Image of Mayon */
